--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
+    "@tanstack/react-query": "^5.29.2",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
     "react": "^18.2.0",
