--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.31.0",
     "@tanstack/react-query-devtools": "^5.32.0",
     "@types/styled-components": "^5.1.34",
@@ -24,6 +25,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8",
+    "websocket": "^1.0.35",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
