--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.31.0",
     "@tanstack/react-query-devtools": "^5.32.0",
+    "@types/react-mentions": "^4.1.13",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-mentions": "^4.4.10",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8",
     "websocket": "^1.0.35",
