--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-icons": "^5.0.1",
     "react-mentions": "^4.4.10",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "websocket": "^1.0.35",
     "zustand": "^4.5.2"
