--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-mentions": "^4.1.13",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@types/react-slick": "^0.23.13",
