--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install Dependencies
         run: yarn install
         
+      - name: Build
+        run: yarn run build
+        
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
