--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -22,10 +22,12 @@ jobs:
             ${{ runner.OS }}-
  
       - name: Install Dependencies
-        run: yarn install
+        run: npm install
         
       - name: Build
-        run: yarn run build
+        env:
+          VITE_BASE_URL:${{secrets.VITE_BASE_URL}}
+        run: npm run build
         
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
