--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -42,7 +42,7 @@ jobs:
           aws s3 cp \
             --recursive \
             --region ap-northeast-2 \
-            dist: s3://jellydiary.life
+            dist s3://jellydiary.life \
             
       - name: Invalidate files
         run: |
