--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -47,5 +47,5 @@ jobs:
       - name: Cloudfront invalidation
         run: |
           aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} \
-            --paths "/*" \
+            --distribution-id ${{ secrets.DISTRIBUTION_ID }} \
+            --paths /*
