--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -42,7 +42,7 @@ jobs:
           aws s3 cp \
             --recursive \
             --region ap-northeast-2 \
-            build s3://jellydiary.life \
+            dist s3://jellydiary.life \
             
       - name: Cloudfront invalidation
         run: |
