--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -42,10 +42,10 @@ jobs:
           aws s3 cp \
             --recursive \
             --region ap-northeast-2 \
-            dist s3://jellydiary.life \
+            dist s3://jellydiary.life
             
       - name: Cloudfront invalidation
         run: |
           aws cloudfront create-invalidation \
             --distribution-id ${{ secrets.DISTRIBUTION_ID }} \
-            --paths /*
+            --paths "/*"
