--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-mentions": "^4.1.13",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.6.8",
+    "event-source-polyfill": "^1.0.31",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
