--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/lodash": "^4.17.4",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
