[JD-158] refactor: diary public private 색상 처리

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-mentions": "^4.4.10",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.13.8",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "websocket": "^1.0.35",
